vlib/v/checker/tests/unexpected_or.vv
fn ret_zero() int {
	return 0
}

fn main() {
	_ = ret_zero() or { 1 }
}
